--- a/css/index.css
+++ b/css/index.css
@@ -151,6 +151,7 @@ header {
 header h2 {
   font-family: 'Catamaran', sans-serif;
   font-size: 1.6rem;
+  color: #190A4F;
 }
 header nav {
   display: flex;
@@ -159,4 +160,62 @@ header nav {
 }
 header nav a {
   padding: 15px;
+  font-size: 1.3rem;
+  color: #190A4F;
+}
+.hero {
+  width: 100%;
+  height: 400px;
+  background-image: url("/images/hero.jpg");
+  background-size: cover;
+  /* or contain depending on what you want */
+  background-position: center center;
+  background-repeat: no-repeat;
+  text-align: center;
+  margin: auto;
+  padding: 0;
+}
+.hero .top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  height: auto;
+  margin-left: 0 0 0 100px;
+}
+.hero .top h1 {
+  font-family: 'Catamaran', sans-serif;
+  font-size: 2.6rem;
+  color: #EEEA8D;
+}
+.hero .top h4 {
+  font-family: 'Catamaran', sans-serif;
+  font-size: 1.8rem;
+  color: #EEEA8D;
+}
+main {
+  width: 55%;
+  float: left;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+main h2 {
+  font-family: 'Catamaran', sans-serif;
+  font-size: 1.8rem;
+  color: #190A4F;
+  margin: 30px 0 0 40px;
+}
+main p {
+  font-family: 'Catamaran', sans-serif;
+  font-size: 1.2rem;
+  color: #8D3D20;
+  margin: 10px;
+  padding: 20px 50px;
+}
+aside {
+  width: 45%;
+  float: right;
 }
