--- a/less/index.less
+++ b/less/index.less
@@ -56,6 +56,23 @@ table {
 html, body {
     height: 100%;
 }
+// Variables
+
+@main-color: @violent-violet;
+@second-color: @niagra;
+@third-color: @khaki;
+@fourth-color: @carrot-orange;
+@fifth-color: @cumin;
+
+@violent-violet: #190A4F;
+@niagra: #0EB790;
+@khaki: #EEEA8D;
+@carrot-orange: #EC9D24;
+@cumin: #8D3D20;
+
+
+
+
 // General Styles
 
 html {
@@ -84,6 +101,7 @@ header {
 	h2 {
 		font-family: 'Catamaran', sans-serif;
 		font-size: 1.6rem;
+		color: @main-color;
 	}
 	nav {
 		display: flex;
@@ -92,7 +110,78 @@ header {
 
 		a {
 			padding: 15px;
+			font-size: 1.3rem;
+			color: @main-color;
 		}
+	}
+
+
+
+
+}// Hero
+
+.hero {
+	width: 100%;
+	height:400px;
+	background-image: url("/images/hero.jpg");
+	background-size: cover; /* or contain depending on what you want */
+	background-position: center center;
+	background-repeat: no-repeat;
+	text-align:center;
+	margin:auto;
+	padding:0;
+		.top {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			width: 400px;
+			height: auto;
+			margin-left: 0 0 0 100px;
+				h1 {
+					font-family: 'Catamaran', sans-serif;
+					font-size: 2.6rem;
+					color: @third-color;
+
+					
+				}
+				h4 {
+					font-family: 'Catamaran', sans-serif;
+					font-size: 1.8rem;
+					color: @third-color;
+				}	
+
+		}
+		
+
+	}
+	// Main Section
+
+
+main {
+	width: 55%;
+	float: left;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+
+	h2 {
+		font-family: 'Catamaran', sans-serif;
+		font-size: 1.8rem;
+		color: @main-color;
+		margin: 30px 0 0 40px;
+	}
+	p {
+		font-family: 'Catamaran', sans-serif;
+		font-size: 1.2rem;
+		color: @fifth-color;
+		margin: 10px;
+		padding: 20px 50px;
 	}
 }
 
+aside {
+	width: 45%;
+	float: right;
+}
