--- a/css/index.css
+++ b/css/index.css
@@ -218,4 +218,43 @@ main p {
 aside {
   width: 45%;
   float: right;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: flex-start;
+}
+footer {
+  width: 100%;
+  float: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+footer h3 {
+  font-family: 'Catamaran', sans-serif;
+  font-size: 2rem;
+  color: #EC9D24;
+  margin-top: 25px;
+}
+footer form {
+  font-family: 'Catamaran', sans-serif;
+  font-size: 1.6rem;
+  color: #190A4F;
+  margin: 25px;
+  padding: 30px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+footer form label {
+  margin: 10px 0;
+  padding: 15px 0;
+}
+footer form input {
+  padding: 1rem;
+}
+footer form textarea {
+  padding: 4rem;
 }
