--- a/less/index.less
+++ b/less/index.less
@@ -184,4 +184,47 @@ main {
 aside {
 	width: 45%;
 	float: right;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	justify-content: flex-start;
+}
+
+footer {
+	width: 100%;
+	float: right;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	h3 {
+		font-family: 'Catamaran', sans-serif;
+		font-size: 2rem;
+		color: @fourth-color;
+		margin-top: 25px;
+	}
+	form {
+		font-family: 'Catamaran', sans-serif;
+		font-size: 1.6rem;
+		color: @main-color;
+		margin: 25px;
+		padding: 30px 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		
+		label {
+			margin: 10px 0;
+			padding: 15px 0;
+		}
+		input {
+			padding: 1.0rem;
+		}
+		textarea {
+			padding: 4rem;
+		}
+
+	}
 }
