--- a/less/index.less
+++ b/less/index.less
@@ -188,6 +188,24 @@ aside {
 	flex-direction: column;
 	align-content: center;
 	justify-content: flex-start;
+	margin-top: 4rem;
+
+	h3 {
+		font-family: 'Catamaran', sans-serif;
+		font-size: 2rem;
+		color: @second-color;
+		margin-bottom: 2.5rem;
+	}
+	ul {
+		margin-left: 10px;
+		padding: 20px;
+
+		li {
+			list-style-type: circle;
+			
+		}
+	}
+
 }
 
 footer {
