--- a/less/index.less
+++ b/less/index.less
@@ -160,11 +160,14 @@ header {
 
 main {
 	width: 55%;
+	height: auto;
+	padding-bottom: 15%;
 	float: left;
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
 	align-items: center;
+	background-color: @second-color;
 
 	h2 {
 		font-family: 'Catamaran', sans-serif;
@@ -175,7 +178,7 @@ main {
 	p {
 		font-family: 'Catamaran', sans-serif;
 		font-size: 1.2rem;
-		color: @fifth-color;
+		color: @main-color;
 		margin: 10px;
 		padding: 20px 50px;
 	}
@@ -188,7 +191,8 @@ aside {
 	flex-direction: column;
 	align-content: center;
 	justify-content: flex-start;
-	margin-top: 4rem;
+	padding-top: 4rem;
+	background-color: @third-color;
 
 	h3 {
 		font-family: 'Catamaran', sans-serif;
@@ -202,10 +206,28 @@ aside {
 
 		li {
 			list-style-type: circle;
+			color: @main-color;
+			font-size: 1.4rem;
+			padding: 10px;
 			
 		}
 	}
+	h4 {
+		font-family: 'Catamaran', sans-serif;
+		font-size: 2rem;
+		color: @fifth-color;
+		margin-bottom: 2.5rem;
+		margin-left: 2.5rem;
+	}
+	p {
+	
+		font-family: 'Catamaran', sans-serif;
+		font-size: 1.4rem;
+		color: @main-color;
+		margin-bottom: 2.5rem;
+		margin-left: 2.5rem;
 
+	}
 }
 
 footer {
@@ -215,31 +237,36 @@ footer {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background-color:@fourth-color;
 
 	h3 {
 		font-family: 'Catamaran', sans-serif;
 		font-size: 2rem;
-		color: @fourth-color;
-		margin-top: 25px;
+		color: @main-color;
+		margin-top: 3rem;
+		
 	}
 	form {
 		font-family: 'Catamaran', sans-serif;
-		font-size: 1.6rem;
+		font-size: 1.2em;
 		color: @main-color;
-		margin: 25px;
-		padding: 30px 0;
+		// margin: 25px;
+		// padding: 30px 0;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		align-items: center;
+		align-items: space-between;
 		
 		label {
 			margin: 10px 0;
-			padding: 15px 0;
+			padding: 0 10px;
+			float: left;
+			
 		}
 		input {
-			padding: 1.0rem;
-		}
+			padding: 1rem, 0.7rem;
+			width: 40%;
+				}
 		textarea {
 			padding: 4rem;
 		}
