--- a/less/index.less
+++ b/less/index.less
@@ -73,8 +73,8 @@ html, body {
 @cumin: #8D3D20;
 
 // font
-@catfont: font-family: 'Catamaran', sans-serif;
-@robot: font-family: 'Roboto', sans-serif;
+@catfont: 'Catamaran', sans-serif;
+@robot: 'Roboto', sans-serif;
 
 //escaping
 @mobile: ~"(max-width: 500px)";
@@ -92,8 +92,8 @@ html, body {
 // General Styles
 
 html {
-	@catfont;
-	@robot;	
+	font-family: @catfont;
+
 }
 
 .container {
@@ -103,11 +103,11 @@ html {
 }
 
 h1 h2 h3 h4 h5 {
-	@catfont;
+	font-family: @catfont;
 }
 
 p {
-	@robot;
+	font-family: @robot;
 }
 // Start of header page
 header {
@@ -157,14 +157,14 @@ header {
 			height: auto;
 			margin-left: 0 0 0 100px;
 				h1 {
-					@catfont;
+					font-family: @catfont;
 					font-size: 2.6rem;
 					color: @third-color;
 
 					
 				}
 				h4 {
-					@catfont;					font-size: 1.8rem;
+					font-family: @catfont;					font-size: 1.8rem;
 					color: @third-color;
 				}	
 
@@ -187,12 +187,13 @@ main {
 	background-color: @second-color;
 
 	h2 {
-		@catfont;		font-size: 1.8rem;
+		font-family: @catfont;		
+		font-size: 1.8rem;
 		color: @main-color;
 		margin: 30px 0 0 40px;
 	}
 	p {
-		@robot;
+		font-family: @robot;
 		font-size: 1.2rem;
 		color: @main-color;
 		margin: 10px;
