--- a/css/index.css
+++ b/css/index.css
@@ -157,8 +157,9 @@ header {
 }
 header h2 {
   font-family: 'Catamaran', sans-serif;
-  font-size: 1.6rem;
-  color: #190A4F;
+  font-size: 1.4rem;
+  color: white;
+  padding-left: 10px;
 }
 header nav {
   display: flex;
@@ -167,8 +168,9 @@ header nav {
 }
 header nav a {
   padding: 15px;
-  font-size: 1.3rem;
+  font-size: 1rem;
   color: white;
+  text-decoration: none;
 }
 .hero {
   width: 100%;
@@ -192,14 +194,19 @@ header nav a {
   margin-left: 0 0 0 100px;
 }
 .hero .top h1 {
+  width: 100%;
+  padding-top: 140px;
   font-family: 'Catamaran', sans-serif;
   font-size: 2.6rem;
-  color: #EEEA8D;
+  color: white;
+  z-index: 1;
 }
 .hero .top h4 {
+  width: 100%;
   font-family: 'Catamaran', sans-serif;
   font-size: 1.8rem;
   color: #EEEA8D;
+  font-size: 1.2rem;
 }
 main {
   width: 55%;
@@ -210,18 +217,18 @@ main {
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  background-color: #0EB790;
+  background-color: #190A4F;
 }
 main h2 {
   font-family: 'Catamaran', sans-serif;
   font-size: 1.8rem;
-  color: #190A4F;
+  color: #0EB790;
   margin: 30px 0 0 40px;
 }
 main p {
   font-family: 'Roboto', sans-serif;
   font-size: 1.2rem;
-  color: #190A4F;
+  color: white;
   margin: 10px;
   padding: 20px 50px;
 }
@@ -232,7 +239,8 @@ aside {
   flex-direction: column;
   align-content: center;
   justify-content: flex-start;
-  padding-top: 4rem;
+  padding-top: 25px;
+  padding-left: 20px;
   background-color: #EEEA8D;
 }
 aside h3 {
@@ -256,7 +264,7 @@ aside h4 {
   font-size: 2rem;
   color: #8D3D20;
   margin-bottom: 2.5rem;
-  margin-left: 2.5rem;
+  margin-left: 15px;
 }
 aside p {
   font-family: 'Catamaran', sans-serif;
